@@ -1,5 +1,11 @@
 2008-02-07  kitone  <kitone@gna.org>
 
+	* src/gui/Application.cc:
+	* src/gui/Application.h:
+	Delete unsued function.
+
+2008-02-07  kitone  <kitone@gna.org>
+
 	* TODO:
 	Update.
 
